--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -17,10 +17,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:hint="@string/title"
-        android:inputType="text" />
-
+        android:inputType="text">
+	</EditText>
     <requestFocus />
-
+    
     <ImageView
         android:id="@+id/image_preview"
         android:layout_width="match_parent"
