--- a/android/res/layout/authentication.xml
+++ b/android/res/layout/authentication.xml
@@ -10,6 +10,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:textColor="#ffffff"
         android:text="@string/sign_in" />
     
     <EditText
