Update "sign in" button to save button of drupal Seven theme.

--- a/android/res/layout/authentication.xml
+++ b/android/res/layout/authentication.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical" >
 
     <TextView
-        android:layout_width="match_parent"
+		android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -48,6 +48,9 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:textColor="#133B54"
+        android:background="#9cc8e3"
+        android:height="35dp"
         android:text="@string/login" />
     
 </LinearLayout>
