Nicer layout for upload screen.

--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -1,47 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical" >
+
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="vertical"
+        android:layout_margin="10dp"
+		android:background="#ffffff" >
     
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"            
-            android:layout_marginLeft="10dp"            
-            android:baselineAligned="false" >
+	    <ImageView
+	        android:id="@+id/image_preview"
+	        android:layout_width="290dp"
+	        android:layout_height="280dp"
+	        android:layout_margin="5dp"
+	        android:background="#000"
+	        android:contentDescription="@string/image_preview"
+	        android:scaleType="center"
+	        android:src="@android:drawable/ic_menu_gallery" />
 
-            <EditText
-                android:id="@+id/title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="@string/title"
-                android:inputType="text" />
+	    <TextView
+	        android:id="@+id/picture_select"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_marginBottom="10dp"
+	        android:gravity="center_horizontal"
+	        android:layout_marginTop="5dp"
+	        android:text="@string/picture_select" />
+	    
+	</LinearLayout>
 
-            <ImageButton
-                android:id="@+id/picture_select"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:contentDescription="@string/picture_select"
-                android:src="@android:drawable/ic_menu_gallery" />
+    <EditText
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:hint="@string/title"
+        android:inputType="text" />
+	
+  	<Button
+  	    android:id="@+id/upload_button"
+  	    android:layout_width="match_parent"
+  	    android:layout_height="wrap_content"
+  	    android:layout_marginLeft="10dp"
+  	    android:layout_marginRight="10dp"
+  	    android:background="#9cc8e3"
+  	    android:height="40dp"
+  	    android:text="@string/upload_button"
+  	    android:textColor="#133B54" />
 
-            <Button
-                android:id="@+id/upload_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/upload_button" />
-        </TableRow>
-
-        <ImageView
-            android:id="@+id/image_preview"
-            android:layout_width="300dp"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:layout_weight="3"
-            android:contentDescription="@string/image_preview"/>
-
-</TableLayout>
-    
+</LinearLayout>    
