--- a/DruGlass/DruGlass/src/main/res/layout/activity_main.xml
+++ b/DruGlass/DruGlass/src/main/res/layout/activity_main.xml
@@ -24,8 +24,7 @@
             android:layout_marginLeft="2dp"
             android:layout_height="wrap_content"
             android:gravity="left"
-            android:textColor="#FFFFFF"
-            android:text="@string/hello_world"  />
+            android:textColor="#FFFFFF"  />
 
         <TextView
             android:id="@+id/text2"
@@ -33,8 +32,7 @@
             android:layout_marginLeft="2dp"
             android:layout_height="wrap_content"
             android:gravity="left"
-            android:textColor="#FFFFFF"
-            android:text="@string/hello_world"  />
+            android:textColor="#FFFFFF"  />
 
     </LinearLayout>
 
@@ -53,8 +51,7 @@
             android:layout_height="wrap_content"
             android:gravity="left"
             android:textColor="#FFFFFF"
-            android:textSize="30sp"
-            android:text="@string/hello_world"  />
+            android:textSize="30sp"  />
 
         <TextView
             android:id="@+id/Singer"
@@ -64,8 +61,7 @@
             android:gravity="left"
             android:textColor="#FFFFFF"
             android:textSize="36sp"
-            android:textStyle="bold"
-            android:text="@string/hello_world"  />
+            android:textStyle="bold"  />
 
     </LinearLayout>
 
