--- a/DruGlass/DruGlass/src/main/res/layout/activity_camera.xml
+++ b/DruGlass/DruGlass/src/main/res/layout/activity_camera.xml
@@ -7,12 +7,12 @@
     <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        />
+        android:layout_width="match_parent" />
+
     <ImageView
         android:id="@+id/imageView"
+        android:contentDescription="@string/photo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
