--- a/DruGlass/DruGlass/src/main/res/layout/activity_main.xml
+++ b/DruGlass/DruGlass/src/main/res/layout/activity_main.xml
@@ -5,74 +5,10 @@
     android:background="@android:color/black">
 
     <ImageView
-        android:id="@+id/bgPhoto"
+        android:id="@+id/photo"
+        android:contentDescription="@string/photo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@null"
-        android:alpha="0.5" />
-
-    <LinearLayout     android:id="@+id/queryLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/text1"
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:textColor="#FFFFFF"  />
-
-        <TextView
-            android:id="@+id/text2"
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:textColor="#FFFFFF"  />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/resultLinearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/titleOfWork"
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:textColor="#FFFFFF"
-            android:textSize="30sp"  />
-
-        <TextView
-            android:id="@+id/Singer"
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="2dp"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:textColor="#FFFFFF"
-            android:textSize="36sp"
-            android:textStyle="bold"  />
-
-    </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/my_progressBar"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_gravity="bottom"
-        android:layout_margin="10dp"
-        />
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/tap_instruction"
