Experimenting with sizes

--- a/DruGlass/DruGlass/src/main/res/layout/activity_camera.xml
+++ b/DruGlass/DruGlass/src/main/res/layout/activity_camera.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <SurfaceView
+   <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_height="match_parent"
         android:layout_width="match_parent" />
@@ -12,7 +12,7 @@
     <ImageView
         android:id="@+id/imageView"
         android:contentDescription="@string/photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
